	- Added support for ##:BranchOff: root contributed by Marc Girod.

0.43 Thu Oct  4 18:44:28 IST 2007
	- Fixed 2 minor bugs in BranchOff support: checking out from
	  /main/0, and after a chtype of the main branch to some other
	  brtype.

0.44 Wed Oct 10 11:20:43 IST 2007
	- Set synctree to ctcmd or ipc mode if installed.
	  Bug fix to BranchOff support: test of branch type constraint
	  on Windows.

0.45 Thu Oct 11 09:26:17 IST 2007
	- Support for -rellinks option.

0.46 Mon Nov  5 12:18:29 GMT 2007
	- checkcs: support running not within a view, e.g. on Windows

0.47 Tue Nov 20 11:17:41 EST 2007
	- Only minor cosmetic changes from previous.

0.48 Mon Nov 19 17:41:09 GMT 2007
	- Preliminary test suite
	- Quiet 'seed merging' of new branches, with contributors removal.

0.49 Sun Mar 16 12:05:12 GMT 2008
	- Fixed: ipc mode not properly set when CtCmd not found.

0.50 Thu Mar 20 11:34:29 GMT 2008
	- Made synctree accessible to make test.

0.51 Fri Mar 21 11:00:42 GMT 2008
	- chdir unconditionally in unix and cleartool
	- skipped the package name from ARGV in runtest

0.52 Wed Mar 26 09:22:26 GMT 2008
	- return or exit depending on call context in synctree
	- mkview with -gpa to force local storage (global might not work)
	- internal _chdir hides the difference introduced with the ipc mode
	- internal ct shares the ST_CT object as much as possible

0.54 Tue Feb  2 15:05:27 GMT 2010
	- Using Argv 1.34 - removed _chdir
	- reuse: branch names ending in numbers
	- reuse: symlinks or dirs with same name in lshis of directory
	- vreuse option
	- completing the processing if checkouts left (required fix to _lsco)
	- removed the Modulino structure set in 0.50 (test strategy reverted)
	- cygwin support
	- clone simplified to support ipc reference counting
	- indentation fixes in the pod parts
	- prepend sbase to the arguments if not accessible (test first)
	- reverted test.pl to 0.47
	- support for incremental label families: apply fixed, move floating